k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      automountServiceAccountToken: false
      containers:
        - name: blog
          image: 727494188945.dkr.ecr.ap-southeast-2.amazonaws.com/blog:0d6d53fc3a3bb02f545982ef0fc0abfcb676f1e3
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "256Mi"
              cpu: "200m"
              ephemeral-storage: "2Gi"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
